--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.5.3",
+    "mongose": "^0.0.2-security",
     "pug": "^3.0.3"
   },
   "devDependencies": {
