--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "md5": "^2.3.0",
     "mongoose": "^8.5.3",
     "mongose": "^0.0.2-security",
     "pug": "^3.0.3"
