--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "md5": "^2.3.0",
     "mongoose": "^8.5.3",
     "mongose": "^0.0.2-security",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
