--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "file-upload-with-preview": "^6.0.2",
     "md5": "^2.3.0",
     "mongoose": "^8.5.3",
     "mongose": "^0.0.2-security",
     "pug": "^3.0.3",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
