--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "file-upload-with-preview": "^6.0.2",
     "md5": "^2.3.0",
+    "method-override": "^3.0.0",
     "mongoose": "^8.5.3",
     "mongose": "^0.0.2-security",
     "pug": "^3.0.3",
