--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.5.3",
     "mongose": "^0.0.2-security",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "pug": "^3.0.3",
     "socket.io": "^4.7.5",
